feat(reqpool): 完善 AI 需求中枢全流程